--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,10 @@
     <string name="onboarding_profile_follows_keep_follows_support_text">(you can update this later)</string>
     <string name="onboarding_profile_follows_customize_follows_headline_text">Customize follows now</string>
     <string name="onboarding_profile_follows_customize_follows_support_text">(edit the recommended follows)</string>
+    <string name="onboarding_profile_follow_button">Follow</string>
+    <string name="onboarding_profile_unfollow_button">Unfollow</string>
+    <string name="onboarding_profile_follow_all_button">Follow All</string>
+    <string name="onboarding_profile_unfollow_all_button">Unfollow All</string>
 
     <string name="onboarding_profile_preview_hint">We will use this info to create your Nostr account. If you wish to make any changes, you can always do so in your profile settings.</string>
     <string name="onboarding_profile_preview_change_banner">Change Banner</string>
