Implement avatar and cover zoom on profile details screen (#234)
* Implement MediaItemScreen to render given media_url
* Update advanceUntilIdleAndDelay to delay on current dispatcher
* Run PR workflow on "macos-latest"

---------

Co-authored-by: Aleksandar Ilic <aleksandar@appollo41.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -649,6 +649,10 @@
     <string name="media_gallery_toast_file_saved">File saved.</string>
     <string name="media_gallery_retry_save">Retry</string>
     <string name="media_gallery_error_photo_not_saved">Unable to save photo. Please try again.</string>
+    
+    <string name="media_item_saved">Media saved.</string>
+    <string name="media_item_error_on_save_message">Unable to save media. Please try again.</string>
+    <string name="media_item_error_on_save_try_again">Retry</string>
 
     <string name="settings_title">Settings</string>
 
