Implement Primal OG origin in buying premium

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,8 @@
     <string name="drawer_followers_suffix">Followers</string>
     <string name="drawer_following_suffix">Following</string>
 
+    <string name="premium_primal_og_title">Primal OG</string>
+    <string name="premium_primal_og_description">The Primal OG tier was created to recognize those users who signed up to Primal Premium in the first year.</string>
     <string name="premium_subscribe_to_get">Subscribe to Primal Premium to get:</string>
     <string name="premium_primal_name">Primal Name</string>
     <string name="premium_primal_name_benefit_one">Verified nostr address</string>
