Implement sats/usd currency switcher on Wallet Dashboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -895,6 +895,7 @@
     <string name="wallet_activation_error_dialog_title">Warning</string>
 
     <string name="wallet_sats_suffix">sats</string>
+    <string name="wallet_usd_suffix">USD</string>
     <string name="wallet_transaction_list_item_received">Received</string>
     <string name="wallet_transaction_list_item_sent">Sent</string>
     <string name="wallet_transaction_list_item_zap_received">Zap received</string>
