--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -322,6 +322,12 @@
     <string name="premium_legend_profile_avatar_ring">Avatar ring</string>
     <string name="premium_legend_profile_apply_button">Apply</string>
 
+    <string name="premium_legend_card_legend_since">Legend since</string>
+    <string name="premium_legend_card_button_see_other">See other Legends</string>
+    <string name="premium_legend_card_button_become_a_legend">Become a Legend</string>
+    <string name="premium_legend_card_dropdown_close">Close</string>
+    <string name="premium_legend_card_dropdown_legend_settings">Legend settings</string>
+
     <string name="feed_reposted_suffix">reposted</string>
     <string name="feed_see_more">See more…</string>
 
