--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -706,6 +706,7 @@
     <string name="settings_wallet_start_in_wallet">Start in wallet</string>
     <string name="settings_wallet_start_in_wallet_hint">Open the wallet when Primal starts</string>
     <string name="settings_wallet_save">Save</string>
+    <string name="settings_new_wallet_connection_retry">Retry</string>
     <string name="settings_new_wallet_connection_title">New Wallet Connection</string>
     <string name="settings_new_wallet_app_name_input_header">Name of the app you wish to connect: </string>
     <string name="settings_new_wallet_app_cancel">Cancel</string>
