Add string resources for Primal Wallet and External App

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -680,6 +680,8 @@
     <string name="settings_wallet_use_primal_wallet">Use Primal wallet</string>
     <string name="settings_wallet_use_primal_wallet_hint">Alternatively you can connect to an external lightning wallet via Nostr Wallet Connect</string>
     <string name="settings_wallet_nwc_header_not_connected">Connect a Wallet</string>
+    <string name="settings_wallet_nwc_primal_wallet">Primal Wallet</string>
+    <string name="settings_wallet_nwc_external_app">External App</string>
     <string name="settings_wallet_nwc_header_connected">Wallet Connected</string>
     <string name="settings_wallet_nwc_connect_alby_wallet">Connect Alby Wallet</string>
     <string name="settings_wallet_nwc_connect_other_wallet">Connect Other Wallet</string>
