--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -315,7 +315,7 @@
     <string name="premium_support_primal_become_a_legend_title">Become a Legend</string>
     <string name="premium_support_primal_become_a_legend_description">Donate $1.000 or more to gain permanent membership and exclusive perks!</string>
     <string name="premium_support_primal_become_a_legend_button_text">Become a Legend Now</string>
-    
+
     <string name="premium_legend_profile_customization">Legendary Profile</string>
     <string name="premium_legend_profile_customization_notice">Don’t want to stand out?\nIf you disable the custom badge and avatar ring,\nyour profile will look like any other profile on  Primal.</string>
     <string name="premium_legend_profile_custom_badge">Custom badge</string>
@@ -327,6 +327,15 @@
     <string name="premium_legend_card_button_become_a_legend">Become a Legend</string>
     <string name="premium_legend_card_dropdown_close">Close</string>
     <string name="premium_legend_card_dropdown_legend_settings">Legend settings</string>
+
+    <string name="premium_legend_leaderboard_title">Primal Legends</string>
+    <string name="premium_legend_leaderboard_latest_tab">Latest</string>
+    <string name="premium_legend_leaderboard_contribution_tab">Contribution</string>
+    <string name="premium_legend_leaderboard_about_legends">About Legends</string>
+    <string name="premium_legend_leaderboard_since">Since</string>
+    <string name="premium_legend_leaderboard_sats">sats</string>
+    <string name="premium_legend_leaderboard_no_content">Unable to load leaderboard.\nPlease try again.</string>
+
 
     <string name="feed_reposted_suffix">reposted</string>
     <string name="feed_see_more">See more…</string>
@@ -663,7 +672,7 @@
     <string name="media_gallery_toast_file_saved">File saved.</string>
     <string name="media_gallery_retry_save">Retry</string>
     <string name="media_gallery_error_photo_not_saved">Unable to save photo. Please try again.</string>
-    
+
     <string name="media_item_saved">Media saved.</string>
     <string name="media_item_error_on_save_message">Unable to save media. Please try again.</string>
     <string name="media_item_error_on_save_try_again">Retry</string>
